--- a/app/page.module.css
+++ b/app/page.module.css
@@ -5,3 +5,19 @@
   padding: 6rem;
   min-height: 100vh;
 }
+
+.weatherDisplay {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 1rem;
+  margin: 1rem;
+  background-color: whitesmoke;
+  color: black
+}
+
+.weatherDisplay span {
+  flex-direction: row;
+  display: flex;
+}
